<resources>
    <string name="app_name">GoT App</string>
    <string name="title_activity_house_arryn">HouseArryn</string>
    <string name="mp_great_houses_a_l">Great Houses A - L</string>
    <string name="mp_great_houses_m_t">Great Houses M - T</string>
    <string name="mp_organisations">Organisations</string>
    <string name="mp_religions">Religions</string>
    <string name="mp_seasons">Seasons</string>
    <string name="great_houses_a_l_arryn">Arryn</string>
    <string name="great_houses_a_l_baratheon">Baratheon</string>
    <string name="great_houses_a_l_bolton">Bolton</string>
    <string name="great_houses_a_l_frey">Frey</string>
    <string name="great_houses_a_l_greyjoy">Greyjoy</string>
    <string name="great_houses_a_l_lannister">Lannister</string>
    <string name="title_house_arryn">House Arryn</string>
    <string name="call_house_arryn">&#8220;As High As Honor&#8221;</string>
    <string name="story_house_arryn">House Arryn is one of the Great Houses of Westeros. It has
        ruled over the Vale of Arryn for millennia, originally as the Kings of Mountain and Vale
        and more recently as Lords Paramount of the Vale and Wardens of the East under the
        Targaryen kings and King Robert Baratheon. The nominal head of House Arryn is Robin Arryn,
        the Lord of the Eyrie, with his mother Lady Lysa acting as Lady Regent until he reaches the
        age of majority.</string>
    <string name="title_house_baratheon">House Baratheon</string>
    <string name="call_house_baratheon">&#8220;Ours is the Fury&#8221;</string>
    <string name="story_house_baratheon">House Baratheon of Storm&#8217;s End was one of the Great Houses
        of Westeros, although also one of the youngest. It is the current royal house. \n\n
        House Baratheon&#8217;s sigil is a black stag on a gold background and their house motto is
        &#8221;Ours is the Fury&#8221;. When Robert ascended the Iron Throne, a gold crown was
        added to the stag, denoting their status as the royal house. \n\n The ancestral Baratheon
        stronghold is Storm&#8217;s End, but since becoming the royal house, they have also taken
        possession of the old Targaryen island fortress of Dragonstone, while the King rules
        from the city of King&#8217;s Landing, the capital of the Seven Kingdoms.</string>
    <string name="title_house_bolton">House Bolton</string>
    <string name="call_house_bolton">&#8220;Our Blades Are Sharp&#8221;</string>
    <string name="story_house_bolton">House Bolton of the Dreadfort is the ruling house of the
        North, having usurped their position from their former liege lords: House Stark. Their
        original lands are in the northeast of the formerly-owned Stark territories. Their
        stronghold is a castle called the Dreadfort and the head of the house is the Lord of
        the Dreadfort. \n\n House Bolton is infamous for its centuries-old practice of flaying
        their enemies alive, to the point that they use a flayed man as their House sigil.
        The Boltons supposedly gave up this practice after bending the knee to House Stark,
        and centuries later Lord Eddard Stark outlawed flaying in the North altogether,
        but the Boltons continue the practice.</string>
    <string name="title_house_frey">House Frey</string>
    <string name="call_house_frey">Those traitor&#8217;s don&#8217;t have a call.</string>
    <string name="story_house_frey">House Frey is the current Great House of the Riverlands,
        having gained their position for their treachery against their former liege lords,
        House Tully, who were stripped of all their titles for their rebellion against the
        Iron Throne. They are also now the Lords of Riverrun. Its current ruler is Lord Walder
        Frey. \n\n Their castle is known as the Twins, for its two identical keeps on either side
        of a river linked by a bridge, sometimes called the Stone Bridge. The Twins is one of the
        primary crossings over the Green Fork of the Trident River, and tolls from bridge
        crossings have made the Freys quite wealthy fairly quickly, elevating them from obscurity
        six centuries ago to being one of the most powerful noble Houses in the Riverlands -
        though they are looked down upon by older aristocratic families.</string>
    <string name="title_house_greyjoy">House Greyjoy</string>
    <string name="call_house_greyjoy">&#8220;We Do Not Sow&#8221;</string>
    <string name="story_house_greyjoy">House Greyjoy is one of the Great Houses of Westeros. Their
        lands are the Iron Islands off the west coast of the continent. They rule from their
        castle Pyke from the island of the same name. The Iron Islands are harsh and bleak and
        the Greyjoys have traditionally survived by raiding their neighbors. They have always had
        plans to conquer the mainland. The head of the house is the Lord Reaper of Pyke. \n\n
        House Greyjoy boasts descent from the Grey King, a legendary King of the Iron Islands
        said to have ruled for a thousand years and taken a mermaid as wife. Like the vast
        majority of ironborn, they worship the Drowned God.</string>
    <string name="title_house_lannister">House Lannister</string>
    <string name="call_house_lannister">&#8220;Hear me roar!&#8221;</string>
    <string name="story_house_lannister">House Lannister of Casterly Rock is one of the Great
        Houses of Westeros, one of its richest and most powerful families and oldest dynasties.
        The major characters Jaime, Cersei, and Tyrion and the recurring characters Tywin, Kevan,
        and Lancel are members of the house. Tywin is the head of House Lannister and Lord of
        Casterly Rock. \n\n Their lands are in the far west of the continent. Their seat is
        Casterly Rock, a massive rocky promontory overlooking the Sunset Sea which has had
        habitations and fortifications built into it over the millennia. They are the Lords
        Paramount of the Westerlands and Wardens of the West. House Lannister&#8217;s Heraldry consists
        of a golden lion on a crimson background, and their House words are &#8220;Hear me
        roar!&#8220;, which is rarely mentioned. Their unofficial motto, which is as well known
        as the official one, is &#8220;A Lannister always pays his debts&#8220; - which is used
        much more often and mostly in negative context, though it can also be used in the
        original, literal sense.</string>
    <string name="great_houses_m_t_martell">Martell</string>
    <string name="great_houses_m_t_stark">Stark</string>
    <string name="great_houses_m_t_targaryen">Targaryen</string>
    <string name="great_houses_m_t_tully">Tully</string>
    <string name="great_houses_m_t_tyrell">Tyrell</string>
    <string name="title_house_martell">House Martell</string>
    <string name="call_house_martell">&#8220;Unbowed, Unbent, Unbroken&#8221;</string>
    <string name="story_house_martell">House Martell of Sunspear is one of the Great Houses of
        Westeros. It rules the peninsula of Dorne in the far south of the continent from their
        castle Sunspear. Though loyal to the Iron Throne, it has pursued a more isolated role
        in wider political events since Robert&#8217;s Rebellion.</string>
    <string name="title_house_stark">House Stark</string>
    <string name="call_house_stark">&#8220;Winter is Coming&#8221;</string>
    <string name="story_house_stark">House Stark of Winterfell is an exiled Great House of
        Westeros, ruling over the vast region known as the North from their seat in Winterfell.
        It is by far one of the oldest lines of Westerosi nobility, claiming a line of descent
        stretching back over eight thousand years. The head of the house was the Lord of
        Winterfell. Before the Targaryen conquest, the leaders of House Stark ruled over
        the region as the Kings in the North. \n\n Their rule in the North seemingly ended after
        the events of the Red Wedding when House Frey and House Bolton betrayed them, and
        Roose Bolton personally killed King Robb Stark. Both the North and Winterfell have since
        been taken over by the Boltons but their hold has been jeopardized now that Sansa Stark
        has escaped their clutches after learning that her brothers Bran and Rickon Stark
        are still alive.</string>
    <string name="title_house_targaryen">House Targaryen</string>
    <string name="call_house_targaryen">&#8220;Fire and Blood&#8221;</string>
    <string name="story_house_targaryen">House Targaryen is a former Great House of Westeros and
        was the ruling royal House of the Seven Kingdoms for three centuries, before it was deposed
        during Robert&#8217;s Rebellion and House Baratheon replaced it as the new royal House. The few
        surviving Targaryens fled into exile.</string>
    <string name="title_house_tully">House Tully</string>
    <string name="call_house_tully">&#8220;Family, Duty, Honor.&#8221;</string>
    <string name="story_house_tully">House Tully is one of the Great Houses of Westeros. Their
        lands are to the west of the continent. Their seat is Riverrun, a castle at the confluence
        of the Red Fork of the Trident with the Tumblestone. They rule over the Riverlands from the
        castle and the head of the house is the Lord of Riverrun. \n\n House Tully rose to
        prominence during the Wars of Conquest. Lord Edmyn Tully rebelled against the King of the
        Isles and the Riverlands, Harren the Black, to support the invading House Targaryen.
        Edmyn&#8217;s fellow Riverlords followed his lead. When Aegon Targaryen established his rule
        from the Iron Throne he rewarded Edmyn, elevating the Tullys to Lords Paramount of the
        Riverlands. \n\n Its current head is Lord Edmure Tully. His sisters, Catelyn and Lysa,
        married Lords Eddard Stark and Jon Arryn during Robert&#8217;s Rebellion, forming a powerful
        alliance of major houses.</string>
    <string name="title_house_tyrell">House Tyrell</string>
    <string name="call_house_tyrell">&#8220;Growing Strong&#8221;</string>
    <string name="season_first">First Season</string>
    <string name="season_second">Second Season</string>
    <string name="season_third">Third Season</string>
    <string name="season_fourth">Fourth Season</string>
    <string name="season_fifth">Fifth Season</string>
    <string name="season_sixth">Sixth Season</string>
    <string name="title_season_first">First Season</string>
    <string name="season_01_plot">Plot</string>
    <string name="season_01_episode_01">01</string>
    <string name="season_01_episode_02">02</string>
    <string name="season_01_episode_03">03</string>
    <string name="season_01_episode_04">04</string>
    <string name="season_01_episode_05">05</string>
    <string name="season_01_episode_06">06</string>
    <string name="season_01_episode_07">07</string>
    <string name="season_01_episode_08">08</string>
    <string name="season_01_episode_09">09</string>
    <string name="season_01_episode_10">10</string>
    <string name="title_season_second">Second Season</string>
    <string name="season_02_plot">Plot</string>
    <string name="season_02_episode_01">01</string>
    <string name="season_02_episode_02">02</string>
    <string name="season_02_episode_03">03</string>
    <string name="season_02_episode_04">04</string>
    <string name="season_02_episode_05">05</string>
    <string name="season_02_episode_06">06</string>
    <string name="season_02_episode_07">07</string>
    <string name="season_02_episode_08">08</string>
    <string name="season_02_episode_09">09</string>
    <string name="season_02_episode_10">10</string>
</resources>