<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.gotapp.SeasonFirst">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_woody"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_seasonFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/papierpng"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/title_season_first"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large" />

        <ImageView
            android:id="@+id/imageview_season_first"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/poster_season_1" />

        <Button
            android:id="@+id/se_01_plot"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:background="@drawable/papierpng"
            android:onClick="se01plot"
            android:text="@string/season_01_plot"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Button for Seasons -->
            <Button
                android:id="@+id/se_01_ep_01"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep01"
                android:text="@string/season_01_episode_01"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_02"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep02"
                android:text="@string/season_01_episode_02"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_03"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep03"
                android:text="@string/season_01_episode_03"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_04"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep04"
                android:text="@string/season_01_episode_04"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_05"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep05"
                android:text="@string/season_01_episode_05"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Button for Seasons -->
            <Button
                android:id="@+id/se_01_ep_06"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep06"
                android:text="@string/season_01_episode_06"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_07"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep07"
                android:text="@string/season_01_episode_07"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_08"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep08"
                android:text="@string/season_01_episode_08"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_09"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep09"
                android:text="@string/season_01_episode_09"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/se_01_ep_10"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/papierpng"
                android:onClick="se01ep10"
                android:text="@string/season_01_episode_10"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--&lt;!&ndash; Button for Seasons &ndash;&gt;-->
        <!--<Button-->
        <!--android:id="@+id/se_01_mp"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="55dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_margin="8dp"-->
        <!--android:textSize="25sp"-->
        <!--android:background="@drawable/papierpng"-->
        <!--android:onClick="se01mp"-->
        <!--android:text="Main Page"-->
        <!--android:textAllCaps="false"/>-->

        <!--<Button-->
        <!--android:id="@+id/se_01_next"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="55dp"-->
        <!--android:layout_margin="8dp"-->
        <!--android:textSize="25sp"-->
        <!--android:background="@drawable/papierpng"-->
        <!--android:onClick="se01next"-->
        <!--android:text="Next Season"-->
        <!--android:textAllCaps="false"/>-->

        <!--</LinearLayout>-->

    </LinearLayout>


</ScrollView>
